welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:8: error: ')' expected but integer literal found.
	if (!vacation && day  6){
                              ^alarmClock:15: error: illegal start of simple expression
}
^